navigation COUCOU CA VA ???

--- a/init-eshop-app/app/message/message.component.html
+++ b/init-eshop-app/app/message/message.component.html
@@ -7,7 +7,7 @@
 
     <tbody>
 
-        <tr *ngFor="let message of filtrer()" ></tr>
+        <tr *ngFor="let message of listeMessage" />
     </tbody>
 </table>
 </div>
