--- a/init-eshop-app/app/salon/salon.component.html
+++ b/init-eshop-app/app/salon/salon.component.html
@@ -25,7 +25,7 @@
   <tr *ngIf="isVisible">
 
     <td><input  [(ngModel)]="salonDefaut.id"/></td>
-    <td><input  [(ngModel)]="SalonDefaut.nom"/></td>
+    <td><input  [(ngModel)]="salonDefaut.nom"/></td>
     <td><button (click)="ajouter()" class="btn btn-secondary"> Ajouter</button>
     <button (click)="annuler()" class="btn btn-secondary"> Annuler</button></td>
   <!-- <div *ngIf="isVisible">
@@ -62,7 +62,7 @@
 
     </div>
 
-    
+
 
 
   </td>
