modif canal et user

--- a/init-eshop-app/app/salon/salon.component.html
+++ b/init-eshop-app/app/salon/salon.component.html
@@ -58,7 +58,7 @@
 
   <td>
     <div *ngIf="!s.isVisible">
-      <button  (click)="modifier(s)" class="btn btn-secondary" >Rejoindre Salon</button>
+      <button  (click)="rejoindre(s)" class="btn btn-secondary" >Rejoindre Salon</button>
 
     </div>
 
