--- a/init-eshop-app/app/navigation.component.html
+++ b/init-eshop-app/app/navigation.component.html
@@ -5,7 +5,8 @@
         <div class="container">
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" [routerLink]="['home']" routerLinkActive="active">Accueil</a></li>
-                <li class="nav-item"><a class="nav-link" [routerLink]="['canal']" routerLinkActive="active">cANAL</a></li>
+                <li class="nav-item"><a class="nav-link" [routerLink]="['canal']" routerLinkActive="active">Canal</a></li>
+                <li class="nav-item"><a class="nav-link" [routerLink]="['message']" routerLinkActive="active">Message</a></li>
             </ul>
         </div>
     </div>
