--- a/init-eshop-app/app/message/message.component.html
+++ b/init-eshop-app/app/message/message.component.html
@@ -2,12 +2,20 @@
     <thead class="thead-dark">
         <tr>
             <th>Message</th>
+              <th>Date</th>
         </tr>
     </thead>
 
     <tbody>
 
-        <tr *ngFor="let message of listeMessage" />
+      <tr *ngFor="let message of listerMessageAll()">
+        <td> {{message.contenu}} </td>
+        <td> {{message.date}} </td>
+      </tr>
+<!--
+        <tr *ngFor="let message of listerMessage()">
+          <td> {{message.contenu}} </td>
+          <td> {{message.date}} </td>
+        </tr> -->
     </tbody>
 </table>
-</div>
